overflow fix

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-\html {
-
+ /* test scale feature */
+ html {
   transform: scale(1.5);
 }
 
@@ -8,14 +8,14 @@
   margin: 0;
   padding: 0;
   font-family: 'League Spartan', sans-serif;
-
 }
 
 body {
   background-color: hsl(222, 26%, 31%);
   font-size: 16px;
   margin-top: 100px;
-  color: white;
+  color: white;  
+  overflow: hidden;
 }
 
 .theme-numbers {
@@ -26,7 +26,6 @@ body {
 }
 
 .upper-container {
-
   display: flex;
   justify-content: space-between;
   margin: 5px;
@@ -152,7 +151,7 @@ input:disabled {
 
 @media (min-width: 576px) {
   .calculator {
-    width: 402px;
+    width: 400px;
   }
 
   .buttons {
